--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-i18next": "^15.1.1",
     "react-router-dom": "^7.0.1",
     "styled-components": "^6.1.13"
