--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-fast-marquee": "^1.6.5",
     "react-i18next": "^15.1.1",
     "react-router-dom": "^7.0.1",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
