--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
+    "react-hook-form": "^7.54.2",
     "react-i18next": "^15.1.1",
     "react-router-dom": "^7.0.1",
     "styled-components": "^6.1.13",
