--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "@vis.gl/react-google-maps": "^1.4.2",
     "material-symbols": "^0.27.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
