--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.5.0",
     "@vis.gl/react-google-maps": "^1.4.2",
     "material-symbols": "^0.27.1",
     "react": "^18.3.1",
@@ -18,6 +19,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.54.2",
     "react-i18next": "^15.1.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.1",
     "styled-components": "^6.1.13",
     "swiper": "^11.1.15"
