--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-i18next": "^15.1.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.1",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.1.13",
     "swiper": "^11.1.15"
   },
