--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@vis.gl/react-google-maps": "^1.4.2",
+    "i18next-browser-languagedetector": "^8.0.2",
+    "i18next-http-backend": "^3.0.2",
     "material-symbols": "^0.27.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
