修正-vercel跳轉api設定

--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,12 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+  "rewrites": [
+    {
+      "source": "/.:path*",
+      "destination": "https://6w6wh.rocket-coding.com/:path*"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/"
+    }
+  ]
 }
